# bluff-casino-economics

./: .gitignore  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: orchestrator.py  prompts.py  tools.py
backend/app/agent/memory/: __init__.py  feedback.py  loader.py
backend/app/agent/memory/company/: deal_structures.md  operational_context.md
backend/app/agent/memory/domain/: bonus_mechanics.md  company_pl_model.md  glossary.md  vip_economics.md
backend/app/agent/providers/: anthropic.py  base.py  openai.py
backend/app/engine/: company_pl.py  constants.py  effective_bonus.py  ops_cost.py  vip_calculator.py
backend/app/models/: schemas.py
backend/app/routes/: calculator.py  chat.py  feedback.py  scenarios.py
backend/app/storage/: sqlite_store.py
backend/tests/: test_engine.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/scenario/[id]/: page.tsx
frontend/src/components/calculator/: PLSummary.tsx  VIPConfigurator.tsx
frontend/src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  ToolCallCard.tsx
frontend/src/components/results/: ComparisonView.tsx  PLTable.tsx  ProjectionChart.tsx  WaterfallChart.tsx
frontend/src/hooks/: useChat.ts  useScenario.ts
frontend/src/lib/: api.ts  calc-api.ts  types.ts
