[project]
name = "bluff-casino-economics"
version = "0.1.0"
description = "Casino economics AI agent - calculates VIP P&L and company projections"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "aiosqlite>=0.21.0",
    "nanoid>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
